--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This is your new Play application
+Esta es la aplicacion para los experimentos de arquisoft de Royal Solutions 2015-2
 =================================
 
 This file will be packaged with your application, when using `activator dist`.
